src/sass/index.css
/* ... */
.header__menu-button .header__icon-close {
  display: block;
}
.header__menu-button.is-open .header__icon-close {
  display: none;
}
.header__drop-down-menu {
  position: fixed;
  flex-flow: column;
  height: 100%;
  background: linear-gradient(#4F2EE8, #FFFFFF);
  overflow: hidden;
  overscroll-behavior: none;
  z-index: 1;
  display: none;
}
.header__drop-down-menu.is-open {
  display: block;
  position: fixed;
  z-index: 1;
  overflow-y: scroll;
}
.header__drop-down-link {
  width: 72px;
  height: 34px;
  display: flex;
  align-items: center;
  margin-top: 247px;
  margin-left: 129px;
  margin-right: 174px;
}
.header__shopping-list {
  display: flex;
  align-items: center;
  margin-top: 17px;
  margin-left: 129px;
  margin-right: 128px;
  width: 118px;
  height: 20px;
  text-decoration: none;
}
.header__drop-down-text {
  text-transform: uppercase;
  color: var(--background-white);
  font-size: 14px;
  line-height: 0.7;
}
.header__drop-down-text:active {
  color: var(--text-color-main);
  font-family: "DM Sans";
  font-style: normal;
  font-weight: 700;
  font-size: 14px;
  line-height: 0.77;
  letter-spacing: -0.04em;
  text-transform: uppercase;
}
.header__icon-lock {
  width: 20px;
  height: 20px;
  fill: var(--background-white);
}
.header__img {
  width: 450px;
  height: 439px;
  top: 443px;
  overflow: hidden;
}
.header__container-drop-down {
  overflow: hidden;
  display: flex;
  flex-direction: column;
}
.header__home-active:active {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 8px 16px;
  gap: 10px;
  width: 72px;
  height: 34px;
  border-radius: 36px;
  background-color: var(--accent-secondary);
}
.header__home-link {
  display: none;
  text-decoration: none;
}
@media screen and (min-width: 768px) {
  .header__home-link {
    display: block;
    margin-right: 16px;
  }
}
@media screen and (min-width: 1440px) {
  .header__home-link {
    margin-right: 24px;
  }
}
.header__home-text {
  text-transform: uppercase;
  font-family: "DM Sans";
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 0.77;
  letter-spacing: -0.04em;
  text-transform: uppercase;
}
.header__home-text:active {
  color: var(--text-color-main);
  font-family: "DM Sans";
  font-style: normal;
  font-weight: 700;
  font-size: 14px;
  line-height: 0.77;
  letter-spacing: -0.04em;
  text-transform: uppercase;
}
.header__shopping-list-active:active {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 7px 16px;
  gap: 8px;
  width: 156px;
  height: 34px;
  background-color: var(--accent-secondary);
  border-radius: 36px;
  font-family: "DM Sans";
  font-style: normal;
  font-weight: 700;
  font-size: 14px;
  line-height: 0.77;
  letter-spacing: -0.04em;
  text-transform: uppercase;
}
.header__shopping-list-link {
  display: none;
}
@media screen and (min-width: 768px) {
  .header__shopping-list-link {
    display: flex;
    align-items: center;
    text-transform: uppercase;
    text-decoration: none;
    color: var(--text-color-main);
  }
}
@media screen and (min-width: 768px) {
  .header__shopping-list-text {
    margin-right: 7px;
    font-family: "DM Sans";
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 0.77;
    letter-spacing: -0.04em;
    text-transform: uppercase;
  }
}

body {
  position: absolute;
}

* {
  margin: 0;
  padding: 0;
}

.switch-list {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 20px;
  height: 100vh;
  width: 100vw;
}

.switch {
  display: flex;
  align-items: center;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
}
.switch__input {
  display: none;
}
.switch__input:checked + .switch__icon {
  background: linear-gradient(#4F2EE8, #686868);
}
.switch__input:checked + .switch__icon:before {
  transform: translate3d(18px, 2px, 0) scale3d(0, 0, 0);
}
.switch__input:checked + .switch__icon:after {
  transform: translate3d(20px, 2px, 0);
}
.switch__icon {
  position: relative;
  display: inline-block;
  max-width: 42px;
  min-width: 42px;
  min-height: 24px;
  max-height: 24px;
  background-color: #BEBEBE;
  border-radius: 22px;
  vertical-align: text-bottom;
  transition: all 0.3s linear;
}
.switch__icon:before {
  content: "";
  position: absolute;
  left: 0;
  width: 38px;
  height: 20px;
  background: linear-gradient(#4F2EE8, #DCDCDC);
  border-radius: 11px;
  transform: translate3d(2px, 2px, 0) scaleX(1);
  transition: all 0.25s linear;
}
.switch__icon:after {
  content: "";
  position: absolute;
  left: 0;
  width: 20px;
  height: 20px;
  background-color: #fff;
  border-radius: 11px;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24);
  transform: translate3d(2px, 2px, 0);
  transition: all 0.2s ease-in-out;
}
.switch__span {
  font-size: 14px;
  margin-left: 5px;
  font-weight: 400;
}

.container-header {
  padding-left: 20px;
  padding-right: 20px;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.menu-container.is-open {
  display: block;
  position: fixed;
  z-index: 1;
}

.book-section {
  list-style: none;
}

.books-container-category {
  display: flex;
  gap: 24px;
  flex-wrap: wrap;
}

.book-card {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 335px;
  list-style: none;
  margin-bottom: 40px;
}
@media only screen and (min-width: 768px) {
  .book-card {
    width: 704px;
  }
}
@media only screen and (min-width: 1440px) {
  .book-card {
    width: 996px;
  }
}
.book-card__section {
  display: flex;
  align-items: flex-start;
  gap: 24px;
  list-style: none;
  align-items: center;
  overflow: hidden;
}
@media only screen and (min-width: 768px) {
  .book-card__section {
    flex-direction: row;
  }
}
.book-card__section--margin-bottom {
  margin-bottom: 8px;
}
@media only screen and (min-width: 768px) {
  .book-card__section--margin-bottom {
    margin-bottom: 20px;
  }
}
/* ... */

